--- a/components/Home/GlobeSection/GlobeSection.scss
+++ b/components/Home/GlobeSection/GlobeSection.scss
@@ -5,7 +5,7 @@
   padding-top: 150px;
   margin: auto;
   width: 80%;
-  justify-content: space-between;
+  justify-content: center;
 
   @media screen and (max-width: 1600px) {
     right: 40px;
